2010-04-23  Spencer Shimko <sshimko@tresys.com>

	* Rebase module loading code on upstream userspace.

	* Automatically detect base module instead of asking
	  user to identify the base.

	* Support for bzipped policy packages (.pp) found in 
	  Fedora 12 and later.

2010-04-20  Chris PeBenito <cpebenito@tresys.com>

	* Fix seinfo to correctly handle cases where there are
	  no nodecon statements in the policy.

2010-04-20  Spencer Shimko <sshimko@tresys.com>

	* Fixes error conditions that prevent apol from exiting.  If 
	  window/tab was already destroyed on exit
	  then apol threw an error and refused to exit. 

2010-04-15  Spencer Shimko <sshimko@tresys.com>

	* Add support for displaying constraints to seinfo.
	* Add constraint CUnit tests.

2010-03-12  John Oliver <joliver@tresys.com>

	* Ensure architecture independent parts of python SWIG wrapper
	  get installed into the same directory as the architecture
	  dependent parts.

2010-03-12  Chris PeBenito <cpebenito@tresys.com>

	* Fix seaudit/libseaudit headers.

2010-03-02  John Oliver <joliver@tresys.com>

	* Fix error message when Tk can not be loaded by apol.  Make it
	  clear that it is Tk, not an SETools library that connot be loaded.

2010-03-01  John Oliver <joliver@tresys.com>

	* Fix error in Apol which would disable new and updated search
	  buttons in rule search.

2009-12-09  John Oliver <joliver@tresys.com>

	* Fix seaudit-report to correctly handle -c and --config
	  options.

2009-07-22  Chris PeBenito <cpebenito@tresys.com>

	* SETools 3.3.6.

2009-07-16  Chris PeBenito <cpebenito@tresys.com>

	* Change default log for seaudit to /var/log/audit/audit.log.

2009-07-16  Chris PeBenito <cpebenito@tresys.com>

	* Change context parsing in libseaudit to use libselinux functions.

2009-06-04  Jeremy Solt <jsolt@tresys.com>

	* Add support for display of level and clearance of contexts to seaudit.
	* Add support for filterting by level and clearance to seaudit.
